# offline-ai-lab

./: .gitignore  LICENSE  README.md  check-desktop-prereqs.sh  install-user-services.sh  package-lock.json  package.json  setup-local-ai.sh  start-ai.sh  start-webui.sh  status.sh
branding/: generate_branding.py  generate_linkedin_kit.py
demo-data/: sample-config.json  sample-scan.txt  sample-script.py
docs/: landing-page-copy.md  linkedin-launch-kit.md  release-checklist.md  release-description.md
docs/screenshots/: README.md
lib/: common.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
webui/: app.js  index.html  server.py  styles.css
