[package]
name = "hackloi-ai-cyber-lab"
version = "0.1.0"
description = "Hackloi AI Cyber Lab desktop app"
authors = ["hackloi"]
license = "MIT"
homepage = "https://github.com/kely26/offline-ai-lab"
repository = "https://github.com/kely26/offline-ai-lab"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
